--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -10,6 +10,7 @@
                   Tất cả người mượn
                 </h5>
                 <div class="card-controls">
+                  <a href="/borrowers/add/" class="btn btn-info" style="margin-right: 5px;">Tìm kiếm</a>
                   <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                 </div>
               </div>
