--- a/src/pages/manage/accounts/edit.f7.html
+++ b/src/pages/manage/accounts/edit.f7.html
@@ -114,6 +114,7 @@
 					console.log(response);
 					addSuccess = !response.error;
 					returnMessage = response.message;
+					$update();
 				});
 			}
 			$update();
