--- a/src/pages/books/list-books.f7.html
+++ b/src/pages/books/list-books.f7.html
@@ -10,6 +10,8 @@
                   Tất cả sách
                 </h5>
                 <div class="card-controls">
+                  <input class="btn" id="allBooksSearch" type="text"
+                         placeholder="Tìm kiếm" style="margin-right: 10px;"/>
                   <a href="/books/add/" class="btn btn-info">Thêm sách</a>
                 </div>
               </div>
@@ -21,8 +23,8 @@
                   </div>
                 </div>
                 `}
-                <div class="table-responsive">
-                  <table class="table table-hover ">
+                <div class="table-responsive" style="margin-top: 20px;">
+                  <table class="table table-hover">
                     <thead>
                     <tr>
                       <th>ID</th>
@@ -37,7 +39,7 @@
                       <th>Hành động</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="listAllBooks">
                     ${books.map((book, i) => $h`
                     <tr>
                       <td>${i + 1}</td>
@@ -92,6 +94,12 @@
         books = response.data.list_books;
         console.log(response);
         $update();
+				$("#allBooksSearch").on("keyup", function () {
+					let value = $(this).val().toLowerCase();
+					$("#listAllBooks tr").filter(function () {
+						$(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+					});
+				});
       });
     }
 
