--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -1,6 +1,27 @@
 <template>
   <div class="page">
     <div class="page-content">
+      <div class="modal fade" id="findBorrowerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+           aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Nhập mã học sinh</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <input type="text" id="inputBorrowerCode"/>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+              <button type="button" class="btn btn-primary" @click="${findBorrower}">Tìm kiếm</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <section class="admin-content">
         <div class="container py-5">
           <div class="col-md-15">
@@ -10,7 +31,8 @@
                   Tất cả người mượn
                 </h5>
                 <div class="card-controls">
-                  <a href="/borrowers/add/" class="btn btn-info" style="margin-right: 5px;">Tìm kiếm</a>
+                  <input class="btn" id="borrowerSearch" type="text"
+                         placeholder="Tìm kiếm" style="margin-right: 10px;"/>
                   <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                 </div>
               </div>
@@ -22,8 +44,8 @@
                   </div>
                 </div>
                 `}
-                <div class="table-responsive">
-                  <table class="table table-hover ">
+                <div class="table-responsive" style="margin-top: 20px;">
+                  <table class="table table-hover">
                     <thead>
                     <tr>
                       <th>ID</th>
@@ -36,7 +58,7 @@
                       <th>Hành động</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="listBorrowers">
                     ${borrowers.map((borrower, i) => $h`
                     <tr>
                       <td>${i + 1}</td>
@@ -89,6 +111,12 @@
 				console.log(response);
 				borrowers = response.data.list_borrowers;
 				$update();
+				$("#borrowerSearch").on("keyup", function () {
+					let value = $(this).val().toLowerCase();
+					$("#listBorrowers tr").filter(function () {
+						$(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+					});
+				});
 			});
 		}
 
@@ -134,6 +162,19 @@
 				resetList();
 			});
 		}
+
+		const findBorrower = (e) => {
+			let borrowerCode = $('#inputBorrowerCode').val();
+			console.log(borrowerCode);
+			console.log(borrowers);
+			const borrowerIndex = borrowers.findIndex(borrower => borrower.student_code.toLowerCase() === String(borrowerCode).toLowerCase());
+			console.log(borrowerIndex);
+			if (borrowerIndex >= 0) {
+				console.log(Clm.app);
+				Clm.app.router.navigate('/borrowers/info/' + borrowerCode + '/');
+			}
+		}
+
 		// Return render function
 		return $render;
 	}
