--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -153,7 +153,7 @@
       <div class="modal-dialog  modal-dialog-align-top-left" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="addLabel">Trả sách</h5>
+            <h5 class="modal-title" id="addLabel">Thêm sách mượn</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
