--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -11,7 +11,7 @@
                 </h5>
                 <div class="card-controls">
                   <input class="btn" id="availableBooksSearch" type="text"
-                         placeholder="Tìm kiếm" style="margin-right: 10px;"/>
+                         placeholder="Tìm kiếm..." style="margin-right: 10px;"/>
                   <a href="/books/add/" class="btn btn-info">Thêm sách</a>
                 </div>
               </div>
