--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -1,27 +1,6 @@
 <template>
   <div class="page">
     <div class="page-content">
-      <div class="modal fade" id="findBorrowerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-           aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Nhập mã học sinh</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <input type="text" id="inputBorrowerCode"/>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-              <button type="button" class="btn btn-primary" @click="${findBorrower}">Tìm kiếm</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <section class="admin-content">
         <div class="container py-5">
           <div class="col-md-15">
@@ -32,7 +11,7 @@
                 </h5>
                 <div class="card-controls">
                   <input class="btn" id="borrowerSearch" type="text"
-                         placeholder="Tìm kiếm" style="margin-right: 10px;"/>
+                         placeholder="Tìm kiếm..." style="margin-right: 10px;"/>
                   <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
                 </div>
               </div>
