add top book and borrower info

--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -99,7 +99,7 @@
                       </div>
                     </div>
                     <div class="ml-auto">
-                      <a href="/books/info/${book.code}/" class="btn btn-white">Chi tiết</a>
+                      <a href="/top/books/${book.code}/" class="btn btn-white">Chi tiết</a>
                     </div>
                   </div>
                   `)}
@@ -134,7 +134,7 @@
                       </div>
                     </div>
                     <div class="ml-auto">
-                      <a href="/borrowers/info/${borrowers.student_code}/" class="btn btn-white">Chi tiết</a>
+                      <a href="/top/borrowers/${borrowers.student_code}/" class="btn btn-white">Chi tiết</a>
                     </div>
                   </div>
                   `)}
