--- a/src/pages/overview/top/top-book-info.f7.html
+++ b/src/pages/overview/top/top-book-info.f7.html
@@ -7,7 +7,7 @@
             <div class="card m-b-30">
               <div class="card-header">
                 <h5 class="m-b-0">
-                  Thông tin
+                  Thông tin sách
                 </h5>
                 <div class="card-controls">
                   <a href="/books/add/" class="btn btn-info">Thêm sách</a>
