--- a/src/pages/overview/top/top-borrower-info.f7.html
+++ b/src/pages/overview/top/top-borrower-info.f7.html
@@ -7,11 +7,8 @@
             <div class="card m-b-30">
               <div class="card-header">
                 <h5 class="m-b-0">
-                  Tất cả người mượn
+                  Thông tin người mượn
                 </h5>
-                <div class="card-controls">
-                  <a href="/borrowers/add/" class="btn btn-info">Thêm người mượn</a>
-                </div>
               </div>
               <div class="card-body">
                 ${alert && $h`
