--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -89,6 +89,11 @@
 			Clm.api("borrowers/all").then(response => {
 				console.log(response);
 				borrowers = response.data.list_borrowers;
+				borrowers.sort((a, b) => {
+					if (a.current_borrowed_books.length < b.current_borrowed_books.length) return 1;
+					else if (a.current_borrowed_books.length > b.current_borrowed_books.length) return -1;
+					else return 0;
+				});
 				$update();
 				$("#borrowerSearch").on("keyup", function () {
 					let value = $(this).val().toLowerCase();
