--- a/src/pages/about/about.f7.html
+++ b/src/pages/about/about.f7.html
@@ -11,7 +11,7 @@
                 </div>
               </div>
               <div class="media-body">
-                <h1>Tester Portal</h1>
+                <h1>CBH Lib Manager</h1>
                 <div class="text-overline opacity-75">
                   Giới thiệu hệ thống
                 </div>
@@ -43,17 +43,16 @@
               <div class="row d-flex">
                   <div class="col-md-4 text-center m-t-15">
                     <div class="avatar avatar-xxl">
-                      <img src="https://cdn.tgdd.vn/2020/08/GameApp/monokai-toolkit-tai-video-xoa-ban-be-loc-binh-luan-logo-16-08-2020-200x200.jpg" alt=""/>
+                      <img src="static/logo-circle.png" alt="image"/>
                     </div>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body monokaijs">
-                      <h5 class="card-title"> Giới thiệu Tester Portal</h5>
+                      <h5 class="card-title"> Giới thiệu CBH Lib Manager</h5>
                       <div class="card-text">
-                        <strong>Tester Portal</strong> là một
-                        <p class="more">
-                          erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
-                        </p>
+                        <strong>CBH Lib Manager</strong> là một <span class="more">
+                          tiện ích mình tạo ra để giúp phần nào đội ngũ câu lạc bộ CBN Bookaholic Home quản lý việc mượn, kiểm sách dễ dàng và tiện lợi hơn. Tiện ích có thể khá phèn do trình độ mình cũng có hạn nhưng dù sao cũng là tâm huyết của mình dành cho câu lạc bộ nên hãy tiếp nhận nó nhé :v Và với bất kỳ lỗi hay điểm gì khiến bạn không ưng thì cứ thoải mái liên hệ với tớ nhé :v Chúc câu lạc bộ sẽ tiến xa hơn và thành công nha ^^
+                        </span>
                       </p>
                       <button class="btn btn-primary" id="toggle">Rút gọn</button>
                     </div>
@@ -69,7 +68,7 @@
               <div class="card-media ">
                 <div class="card-media text-center">
                   <div class="avatar avatar avatar-xxl m-t-20 ">
-                    <img class="rounded-circle" src="https://scontent.fhan3-3.fna.fbcdn.net/v/t1.0-9/96358750_264258654695705_2423493008243556352_o.jpg?_nc_cat=101&ccb=2&_nc_sid=09cbfe&_nc_ohc=ZC74uEqWZFsAX-j_xBX&_nc_ht=scontent.fhan3-3.fna&oh=f4363a4f528d6b43717cae8aec2b50b7&oe=6035F4D2"
+                    <img class="rounded-circle" src="https://i.imgur.com/4UcYe2q.png"
                          alt="Card image cap"/>
                   </div>
                 </div>
@@ -90,21 +89,7 @@
                         </div>
                       </div>
                       <div class="col-auto">
-                        <p class="m-0">Nguyễn Anh Nhân</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="timeline-item">
-                    <div class="timeline-wrapper">
-                      <div class="">
-                        <div class="avatar avatar-sm">
-                          <div class="avatar-title bg-info rounded-circle">
-                            <i class="mdi mdi-briefcase"></i>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-auto">
-                        <p class="m-0">COCC tại NorthStudio TTAS., JSC</p>
+                        <p class="m-0">Nguyễn Duy Bảo</p>
                       </div>
                     </div>
                   </div>
@@ -118,7 +103,7 @@
                         </div>
                       </div>
                       <div class="col-auto">
-                        <p class="m-0">Sống tại Hà Nội</p>
+                        <p class="m-0">Cựu học sinh Trường THPT chuyên Bắc Ninh</p>
                       </div>
                     </div>
                   </div>
@@ -151,7 +136,7 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Số điện thoại</span></div>
-                    <div class="text-muted">0988542654</div>
+                    <div class="text-muted">0367075337</div>
                   </div>
                 </div>
 
@@ -165,7 +150,7 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Email</span></div>
-                    <div class="text-muted">monokaijs@gmail.com</div>
+                    <div class="text-muted">jayremnt@gmail.com</div>
                   </div>
                 </div>
 
@@ -179,7 +164,7 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Facebook</span></div>
-                    <div class="text-muted"><a href="https://www.facebook.com/northstudio.official">NorthStudio TTAS., JSC</a></div>
+                    <div class="text-muted"><a href="https://www.facebook.com/jayremnt/">Nguyễn Duy Bảo</a></div>
                   </div>
                 </div>
 
@@ -193,7 +178,7 @@
                   </div>
                   <div class="">
                     <div class="name"><span>Instagram</span></div>
-                    <div class="text-muted"><a href="https://www.facebook.com/northstudio.official">NorthStudio TTAS., JSC</a></div>
+                    <div class="text-muted"><a href="https://www.instagram.com/jayremnt/">Nguyễn Duy Bảo</a></div>
                   </div>
                 </div>
               </div>
