--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -40,7 +40,7 @@
                     <div class="my-auto col-md-7">
                       <h1 class="m-0">${books.length - availableBooks.length}</h1>
                       <p class="m-0 text-muted">
-                        Số sách đã mượn
+                        Số sách đang mượn
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
