fix not show loading modal when login, update some stupid stuff

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -175,7 +175,7 @@
 
     <div class="modal fade bd-example-modal-lg" data-backdrop="static" data-keyboard="false" tabindex="-1" id="loader">
       <div class="modal-dialog modal-sm"
-           style="display: table; position: relative; margin: 0 auto; top: calc(50% - 24px);">
+           style="display: table; position: relative; margin: 0 auto; top: calc(50% - 24px); z-index: 99999;">
         <div class="modal-content" style="width: 48px; background-color: transparent; border: none;">
           <div class="spinner-grow text-primary" role="status">
             <span class="sr-only">Loading...</span>
