--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -189,7 +189,7 @@
       $update();
     }
 
-    resetList();
+    if (Clm.isLoggedIn) resetList();
 
     // Return render function
     return $render;
