add borrowing routes and update some stuff

--- a/src/pages/aside.f7.html
+++ b/src/pages/aside.f7.html
@@ -7,7 +7,6 @@
               <span class="menu-name">Tổng quan</span>
           </span>
           <span class="menu-icon">
-          <span class="icon-badge badge-success badge badge-pill">4</span>
             <i class="icon-placeholder mdi mdi-shape-outline"></i>
           </span>
         </a>
@@ -21,7 +20,6 @@
             </span>
           </span>
           <span class="menu-icon">
-            <span class="icon-badge badge-success badge badge-pill">4</span>
             <i class="icon-placeholder mdi mdi-shape-outline"></i>
           </span>
         </a>
@@ -31,6 +29,16 @@
             <a href="/borrowers/" data-view="#view-main" class="menu-link">
               <span class="menu-label">
                 <span class="menu-name">Tất cả người mượn</span>
+              </span>
+              <span class="menu-icon">
+                <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
+              </span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="/borrowers/borrowing/" data-view="#view-main" class="menu-link">
+              <span class="menu-label">
+                <span class="menu-name">Người đang mượn</span>
               </span>
               <span class="menu-icon">
                 <i class="icon-placeholder mdi mdi-shape-circle-plus"></i>
@@ -74,9 +82,9 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="/books/add/" data-view="#view-main" class="menu-link">
+            <a href="/books/borrowing/" data-view="#view-main" class="menu-link">
               <span class="menu-label">
-                <span class="menu-name">Thêm sách</span>
+                <span class="menu-name">Sách đã được mượn</span>
               </span>
               <span class="menu-icon">
                 <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
@@ -87,6 +95,16 @@
             <a href="/books/available/" data-view="#view-main" class="menu-link">
               <span class="menu-label">
                 <span class="menu-name">Sách có thể mượn</span>
+              </span>
+              <span class="menu-icon">
+                <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
+              </span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="/books/add/" data-view="#view-main" class="menu-link">
+              <span class="menu-label">
+                <span class="menu-name">Thêm sách</span>
               </span>
               <span class="menu-icon">
                 <i class="icon-placeholder mdi mdi-toolbox-outline"></i>
