--- a/src/pages/books/list-borrowing-books.f7.html
+++ b/src/pages/books/list-borrowing-books.f7.html
@@ -35,7 +35,6 @@
                       <th>Giá tiền</th>
                       <th>Ngày nhập</th>
                       <th>Người nhập</th>
-                      <th>Tình trạng</th>
                       <th>Hành động</th>
                     </tr>
                     </thead>
@@ -92,6 +91,7 @@
     const resetList = (e) => {
       Clm.api("books/all").then(response => {
         books = response.data.list_books;
+        books = books.filter(book => book.borrowed_info.length > 0 && book.borrowed_info[0].is_borrowed);
 				books.sort((a, b) => {
 					if (!a?.borrowed_info?.length) return 1;
 					else if (a?.borrowed_info?.length) return 0;
