--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -168,6 +168,7 @@
       let response = await Clm.api("borrowers/all");
       borrowers = response.data.list_borrowers;
       console.log(borrowers);
+      borrowers = borrowers.filter(borrower => borrower.current_borrowed_books.length > 0);
       borrowers.sort((a, b) => {
         if (a.borrowed_books_amount < b.borrowed_books_amount) return 1;
         else if (a.borrowed_books_amount > b.borrowed_books_amount) return -1;
@@ -177,6 +178,7 @@
 
       response = await Clm.api("books/all");
       books = response.data.list_books;
+      books = books.filter(book => book.borrowed_times > 0);
       books.sort((a, b) => {
         if (a.borrowed_times < b.borrowed_times) return 1;
         else if (a.borrowed_times > b.borrowed_times) return -1;
