--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -178,13 +178,13 @@
 
       response = await Clm.api("books/all");
       books = response.data.list_books;
-      books = books.filter(book => book.borrowed_times > 0);
-      books.sort((a, b) => {
+      topBooks = books.filter(book => book.borrowed_times > 0);
+      topBooks.sort((a, b) => {
         if (a.borrowed_times < b.borrowed_times) return 1;
         else if (a.borrowed_times > b.borrowed_times) return -1;
         else return 0;
       });
-      topBooks = books.slice(0, 10);
+      topBooks = topBooks.slice(0, 10);
 
       response = await Clm.api("books/available");
       availableBooks = response.data.list_available_books;
