--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -18,7 +18,7 @@
                     <div class="my-auto col-md-7">
                       <h1 class="m-0">${borrowers.length}</h1>
                       <p class="m-0 text-muted">
-                        Số người mượn sách
+                        Số người đang mượn sách
                       </p>
                     </div>
                     <div class="my-auto text-md-right col-md-5">
