--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -92,6 +92,11 @@
 			Clm.api("books/available/").then(response => {
 				console.log(response);
 				availableBooks = response.data.list_available_books;
+				availableBooks.sort((a, b) => {
+					if (a.name > b.name) return 1;
+					else if (a.name < b.name) return -1;
+					else return 0;
+				});
 				$update();
 				$("#availableBooksSearch").on("keyup", function () {
 					let value = $(this).val().toLowerCase();
