--- a/src/pages/books/list-books.f7.html
+++ b/src/pages/books/list-books.f7.html
@@ -93,8 +93,9 @@
       Clm.api("books/all").then(response => {
         books = response.data.list_books;
 				books.sort((a, b) => {
-					if (!a?.borrowed_info?.length) return 1;
-					else if (a?.borrowed_info?.length) return 0;
+					if (a.name > b.name) return 1;
+					else if (a.name < b.name) return -1;
+					else return 0;
 				});
         console.log(response);
         $update();
