--- a/src/pages/borrowers/list-borrowing-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowing-borrowers.f7.html
@@ -91,8 +91,8 @@
 				borrowers = response.data.list_borrowers;
 				borrowers = borrowers.filter(borrower => borrower.current_borrowed_books.length > 0);
 				borrowers.sort((a, b) => {
-					if (a.current_borrowed_books.length < b.current_borrowed_books.length) return 1;
-					else if (a.current_borrowed_books.length > b.current_borrowed_books.length) return -1;
+					if (a.name > b.name) return 1;
+					else if (a.name < b.name) return -1;
 					else return 0;
 				});
 				$update();
